--- a/index.html
+++ b/index.html
@@ -6,8 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Primer ejemplo html</title>
  </head>
- <body>
-   <p>Hola Mundo</p>
+ <body> 
+   <h1>Titulo 1</h1>
+   <h2>Titulo 2</h2>
+   <h3>Titulo 3</h3>
+   <h4>Titulo 4</h4>
+   <h5>Titulo 5</h5>
+   <h6>Titulo 6</h6>
+   <p>Hola Mundo!</p>
     
 
  </body>
