aprendimos la etiqueta pre

--- a/Practicaw3school.html
+++ b/Practicaw3school.html
@@ -9,7 +9,15 @@
 <body>
     <h1>Mi primer titulo</h1>
     <p>Mi primer parrafo</p>
-    <p>Este es otro parrafo</p>
+    <p title="aca es un ejemplo de titulo">Este es otro parrafo</p>
     <a href="https://www.w3schools.com/" >Me preparo aqui</a>
+    <hr>
+    <p>Este va a ser mi nuevo parrafo, luego de una linea que divida.</p>
+    <pre>
+        El sueño ocupa la siesta
+        del pueblo blanco y tendido
+        hay un silencio dormido
+        el sueño ocupa la siesta.
+    </pre>
 </body>
 </html>
