subimos al repo

--- a/Practicaw3school.html
+++ b/Practicaw3school.html
@@ -12,7 +12,7 @@
     <p title="aca es un ejemplo de titulo">Este es otro parrafo</p>
     <a href="https://www.w3schools.com/" >Me preparo aqui</a>
     <hr>
-    <p>Este va a ser mi nuevo parrafo, luego de una linea que divida.</p>
+    <p style="background-color:tomato;">Este va a ser mi nuevo parrafo, luego de una linea que divida.</p>
     <pre>
         El sueño ocupa la siesta
         del pueblo blanco y tendido
